# gps_anomaly_detection

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  python-publish.yml
gps_anomaly/: __init__.py  anomaly_detect.py  config.py  config_distance.py  config_heading.py  config_info_anomalies.py  detect_functions.py  detector.py  one_sequence.py  version.py
gps_anomaly/config/: distance.py  heading.py  info_anomalies.py
gps_v2/: all_sequences.py  configs.py  processes_per_sequence.py
tests/: test_gps_anomaly.py
