[tool.poetry]
name = "gps_anomaly"
version = "0.1.12"
description = "Detecet and Remove GPS anomalies points"
readme = "README.md"
authors = ["mcv_ <murat@visiosoft.com.tr>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
